# warp-async-graphql-sqlx

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
resources/: base.toml  log4rs.toml
server/: Cargo.toml
server/resources/: log4rs.toml
server/src/: lib.rs  main.rs
server/src/config/: configs.rs
server/src/security/: crypto.rs
server/src/web/gql/: mod.rs  queries.rs
src/: lib.rs  main.rs
src/common/error/: errors.rs
src/config/: configs.rs
src/repository/: users.rs
src/service/: users.rs
src/web/gql/: mod.rs  mutations.rs  queries.rs
