[package]
authors = ["liteng <yujinjianxin@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# 核心
tokio = {version = "1.5.0", features = ["full"]}
warp = "0.3.1"

# 工具
lazy_static = "1.4.0"
regex = "1.5.4"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
validator = {version = "0.13.0", features = ["derive"]}
listenfd = "0.3.3"

# 错误处理
anyhow = "1.0.40"
thiserror = "1.0.24"

# graphql
async-graphql = {version = "2.8.5", features = ["chrono", "uuid", "apollo_tracing", "log"]}
async-graphql-warp = "2.8.5"

# 异步特征
async-trait = "0.1.50"

# 时间处理
chrono = {version = "0.4.19", features = ["serde"]}
humantime = "2.1.0"
humantime-serde = "1.0.1"

# 配置
config = "0.11.0"
dotenv = "0.15.0"

# 安全
jsonwebtoken = "7.2.0"
rust-argon2 = "0.8.3"

# 日志
log = "0.4.14"
log4rs = {version = "1.0.0", features = ["toml_format"]}

# 序列化
serde = "1.0.126"
serde-aux = "2.2.0"
serde_json = "1.0.64"

# 数据库
sqlx = {version = "0.5.2", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono"]}

